# 04_HUFcusFocus_Handsof

./: .gitignore  README.md
BACKEND/: HANDSOF_API.cer  README.md  build.gradle
BACKEND/src/main/resources/: application.yml
FRONTEND/: README.md  package-lock.json  package.json
FRONTEND/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
FRONTEND/.github/workflows/: deploy.yml
FRONTEND/public/: electron.js  electron.ts  index.html
FRONTEND/src/: App.tsx
FRONTEND/src/assets/img/: index.tsx
FRONTEND/src/assets/svg/: index.tsx
FRONTEND/src/components/: Router.tsx
FRONTEND/src/components/common/: Header.styled.tsx  Header.tsx  Navbar.styled.tsx  Navbar.tsx  index.tsx  shared.tsx
FRONTEND/src/components/log/: LogBar.styled.tsx  LogBar.tsx  LogContent.styled.tsx  LogContent.tsx  LogMessage.styled.tsx  LogMessage.tsx  index.tsx
FRONTEND/src/components/main/: MainContent.styled.tsx  MainContent.tsx  index.tsx
FRONTEND/src/components/setting/: Modal.tsx  SettingModal.styled.tsx  SettingModal.tsx  index.tsx
FRONTEND/src/pages/: Log.tsx  Main.tsx  Translate.tsx
FRONTEND/src/styles/: global-style.ts  styled.d.ts  theme.ts
ML/: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ML/src/: main.py
ML/src/api/: __init__.py  auth.py  chat.py
ML/src/core/: __init__.py  app_config.py  gunicorn_config.py
ML/src/crud/: __init__.py  base.py  slack.py  user.py
ML/src/schema/: __init__.py
ML/src/schema/slack/: __init__.py  crud.py
ML/src/schema/user/: __init__.py  crud.py
ML/src/util/: __init__.py  slack.py
(+18 files in other folders)
