[tool.poetry]
name = "handsof-ml"
version = "1"
description = "Handsof Machine Learning"
authors = ["0417taehyun <0417taehyun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
motor = "^3.0.0"
slack-sdk = "^3.18.0"
email-validator = "^1.2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pre-commit = "^2.20.0"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
